objects/Feed_Item__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Created for CR-20160203-9580</description>
        <label>Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>Attribute01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Column__c</fullName>
        <description>The Feed Transaction column name.
CR-20160203-9580 - Renamed its Label by adding zzz in text.</description>
        <inlineHelpText>The Feed Transaction column name</inlineHelpText>
        <label>zzzColumn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_label__c</fullName>
        <description>The output value of the column for the current feed</description>
        <inlineHelpText>The output value of the column for the current feed</inlineHelpText>
        <label>Column label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feed_Column_ID__c</fullName>
        <label>zzzFeed Column ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feed_Identifier__c</fullName>
        <label>Feed Identifier</label>
        <referenceTo>Feed__c</referenceTo>
        <relationshipLabel>Feed Items</relationshipLabel>
        <relationshipName>Incentive_Feed_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Output_Data_Type__c</fullName>
        <label>Output Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Output_Order__c</fullName>
        <description>The sequence of any one column within the output</description>
        <inlineHelpText>The sequence of any one column within the output</inlineHelpText>
        <label>Output Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Feed Item</label>
    <nameField>
        <displayFormat>IFI-{0}</displayFormat>
        <label>Feed Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Items</pluralLabel>
    <recordTypes>
        <fullName>Feed_Item</fullName>
        <active>true</active>
        <label>Feed Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Attribute_required</fullName>
        <active>true</active>
        <description>Created for CR-20160203-9580, Attribute is blank</description>
        <errorConditionFormula>ISBLANK( TEXT(Attribute__c) )</errorConditionFormula>
        <errorDisplayField>Attribute__c</errorDisplayField>
        <errorMessage>You must map this Feed Item to an attribute column of Feed Transaction.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Output_Data_Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Output_Data_Type__c</errorDisplayField>
        <errorMessage>An output data type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_order</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
	ISBLANK(Output_Order__c),
	ISNULL(Output_Order__c),
	Output_Order__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>Output_Order__c</errorDisplayField>
        <errorMessage>The Output order must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>